--- a/css/main.css
+++ b/css/main.css
@@ -94,7 +94,6 @@ textarea {
 /* ==========================================================================
    Author's custom styles
    ========================================================================== */
-
 html {
   background-color: #fff;
   height: 100%;
@@ -125,38 +124,28 @@ main {
 header,
 footer,
 main {
-  /*set display to flex and vertically & horizontally align by setting justify-content and align-items to center*/
-}
-
-#div-1,
-#div-2,
-#div-3 {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  color: #fff;
-  line-height: 1.5em;
-  font-size: 1.25em;
-  height: auto;
-}
-
-.wrapper span {
-  font-family: 'Lora', sans-serif;
-  font-size: 1.3em;
+	display: flex;
+	justify-content: center;
+	align-items: center;
 }
 
 .flex-container {
-  /*set display to flex and vertically & horizontally align by setting justify-content and align-items to center, and set flex-flow to row wrap*/
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .flex-items {
-  /*set display to flex and vertically & horizontally align by setting justify-content and align-items to center*/
   color: #fff;
   line-height: 1.5em;
   font-size: 1.6em;
   background-color: #f16059;
   width: 30%;
   height: 200px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 /* ==========================================================================
@@ -239,21 +228,21 @@ main {
    Modify as content requires.
    ========================================================================== */
 
-@media all and (max-width: 768px) {
+@media all and (min-width: 768px) {
     body {
       padding: 1em;
     }
 }
 
 @media (min-width: 1200px) {
-  #div-1,
-  #div-2{
-      /* set your flex value to 1 50% */
-  }
+    #div-1,
+    #div-2 {
+      flex: 1 50%;
+    }
 
-  #div-3 {
-    /* set your flex value to 1 100% */
-  }
+    #div-3 {
+      flex: 1 100%;
+    }
 }
 
 @media print,
